--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
         "gulp-sourcemaps": "2.6.5",
         "gulp-terser": "1.4.0",
         "gulp-w3c-html-validator": "2.0.1",
+        "gulp-wait": "0.0.2",
         "gulp-webp": "4.0.1",
         "postcss": "8.1.4",
         "postcss-csso": "5.0.0",
-        "stylelint": "13.7.1",
+        "stylelint": "13.3.3",
         "stylelint-config-htmlacademy": "0.1.4",
         "vinyl-buffer": "1.0.1",
         "vinyl-source-stream": "2.0.0",
