--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "gulp-imagemin": "7.1.0",
         "gulp-plumber": "1.2.1",
         "gulp-postcss": "9.0.0",
+        "gulp-pug": "4.0.1",
+        "gulp-pug-linter": "1.4.0",
         "gulp-rename": "2.0.0",
         "gulp-sass": "4.1.0",
         "gulp-sourcemaps": "2.6.5",
@@ -35,6 +37,8 @@
         "gulp-webp": "4.0.1",
         "postcss": "8.1.4",
         "postcss-csso": "5.0.0",
+        "pug": "3.0.0",
+        "pug-lint": "2.6.0",
         "stylelint": "13.3.3",
         "stylelint-config-htmlacademy": "0.1.4",
         "vinyl-buffer": "1.0.1",
@@ -50,7 +54,7 @@
     },
     "editorconfig-cli": [
         "*.json",
-        "source/html/**/*.html",
+        "source/markup/**/*.html",
         "source/js/**/*.js",
         "source/styles/**/*.{css,scss}",
         "source/img/**/*.svg"
