--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "pug-lint": "2.6.0",
         "stylelint": "13.3.3",
         "stylelint-config-htmlacademy": "0.1.4",
+        "typograf": "6.11.3",
         "vinyl-buffer": "1.0.1",
         "vinyl-source-stream": "2.0.0",
         "yargs": "16.1.1"
