--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "gulp": "4.0.2",
         "gulp-clean": "0.4.0",
         "gulp-concat": "2.6.1",
+        "gulp-data": "1.3.1",
         "gulp-htmlhint": "3.0.1",
         "gulp-htmlmin": "5.0.1",
         "gulp-if": "3.0.0",
