--- a/package.json
+++ b/package.json
@@ -54,11 +54,12 @@
     "scripts": {
         "editorconfig": "editorconfig-cli",
         "stylelint": "stylelint \"source/styles/**/*.{css,scss}\"",
+        "eslint": "eslint source/js/**/*.js",
         "start": "gulp start",
         "watch": "gulp start --php",
         "build": "gulp build --production",
         "dev": "gulp build",
-        "test": "gulp test && npm run stylelint && npm run editorconfig"
+        "test": "gulp test && npm run eslint && npm run stylelint && npm run editorconfig"
     },
     "pre-commit": [
       "test"
